<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DatosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/atras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:layout_weight="4"
                android:src="@drawable/atras"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_aplicacion"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    style="@style/slogan"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/datos"
            android:layout_marginBottom="10dp"
            style="@style/titulo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personales"
            android:layout_marginBottom="30dp"
            style="@style/titulo_secundario"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:background="@drawable/edit_style"
            android:layout_marginBottom="10dp"
            android:hint="@string/nombre"/>

        <EditText
            android:id="@+id/apellido1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_style"
            android:hint="@string/apellido1"/>

        <EditText
            android:id="@+id/apellido2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textCapCharacters"
            android:background="@drawable/edit_style"
            android:hint="@string/apellido2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:drawableStart="@drawable/calendario"
                android:layout_marginEnd="3dp"
                android:background="@drawable/edit_style"
                android:hint="@string/nacimiento"/>

            <Spinner
                android:id="@+id/sexo"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:entries="@array/sexo"
                android:layout_marginStart="3dp"
                android:inputType="textCapCharacters"
                android:layout_weight="1"
                android:background="@drawable/edit_style"
                android:hint="@string/nacionalidad"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:layout_marginBottom="10dp"
            style="@style/titulo_secundario"/>

        <Spinner
            android:id="@+id/tipo_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:layout_marginBottom="10dp"
            android:entries="@array/tipos_documento"
            android:background="@drawable/edit_style"
            android:hint="@string/tipo_documento"/>

        <EditText
            android:id="@+id/num_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_style"
            android:hint="@string/numero_coumento"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/expedicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:drawableStart="@drawable/calendario"
                android:layout_marginEnd="3dp"
                android:background="@drawable/edit_style"
                android:hint="@string/expedicion"/>

            <EditText
                android:id="@+id/nacionalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:inputType="textCapCharacters"
                android:layout_weight="1"
                android:background="@drawable/edit_style"
                android:hint="@string/nacionalidad"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/letra_boton"
            android:background="@drawable/button_style"
            android:text="@string/agregar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/consultar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="50dp"
            android:textAllCaps="false"
            android:textColor="@color/letra_boton"
            android:background="@drawable/button_style"
            android:layout_marginBottom="40dp"
            android:text="@string/consulta"/>

    </LinearLayout>
</ScrollView>