<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OptionsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/atras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:layout_weight="4"
                    android:src="@drawable/atras"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_aplicacion"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/slogan"
                        style="@style/slogan"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingresar_vivienda"
            style="@style/titulo"/>

        <EditText
            android:id="@+id/nombre_viv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:background="@drawable/edit_style"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nombre_vivienda"/>

        <EditText
            android:id="@+id/localidad_viv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:background="@drawable/edit_style"
            android:layout_marginBottom="10dp"
            android:hint="@string/localidad"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ingresar_logo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textColor="@color/letra_boton"
            android:text="@string/ingresar_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/descripcion_logo"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/upl_imagen"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_style"
            android:layout_height="200dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ingresar_casa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textColor="@color/letra_boton"
            android:text="@string/ingr_vivienda"/>
    </LinearLayout>
</ScrollView>
