<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.CheckInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/atras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:layout_weight="4"
                android:src="@drawable/atras"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_aplicacion"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    style="@style/slogan"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registros"
        android:layout_marginVertical="20dp"
        style="@style/titulo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recy_datos"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finalizar"
        android:layout_width="match_parent"
        android:background="@drawable/button_style"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/letra_boton"
        android:layout_marginHorizontal="16dp"
        android:text="@string/finalizar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nuevo_check"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:textAllCaps="false"
        android:textColor="@color/letra_boton"
        android:background="@drawable/button_style"
        android:text="@string/nuevo_check"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>